--- a/style.css
+++ b/style.css
@@ -88,6 +88,13 @@ body {
   padding: 20px;
 }
 
+.koi {
+  max-height: 200px;
+  max-width: 200px;
+  margin: auto;
+  padding: 20px;
+}
+
 .result-message{
 	width: 80%;
 	margin: 10%;
